Fix the color of the block title lined on dark mode

--- a/src/styl/_components/_block.styl
+++ b/src/styl/_components/_block.styl
@@ -164,6 +164,9 @@ $block-colors ?= merge($colors-themes, {
                     [data-theme=dark] &
                         text-shadow none // stronger than previous selector
 
+                    [data-theme=dark] &
+                        color $theme-color-dark
+
             .block-footer
                 .linkIcon
                 .pager-next:not(:disabled)
